feat: reestruturação completa do backend, padronização do modelo, criação da suíte de testes e correções gerais
- Ajusta models para usar `usuarioId` de forma consistente
- Refatora associações Sequelize e corrige FKs
- Implementa validações e tratamentos de erro em categorias e usuários
- Cria suíte completa de testes (usuarios e categorias) com Jest + Supertest
- Adiciona setup/teardown para ambiente de testes
- Remove logs desnecessários e silencia console no ambiente de teste
- Melhora estrutura de pastas (routes, controllers, services, repository)
- Implementa .gitignore final otimizado
- Sincroniza DB de forma limpa e resolve conflitos de migrations
- Testes 100% passando (16/16)

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,56 @@
+# --- Node ---
 node_modules/
-# Environment variables
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-lock.yaml
+
+# --- Environment Files ---
 .env
-user_files/
+.env.*
+!.env.example   # allow an example if you add one later
+
+# --- Logs ---
+logs/
+*.log
+*.log.*
+debug.log
+
+# --- Coverage ---
+coverage/
+.nyc_output/
+
+# --- Jest ---
+.jest/
+jest-cache/
+jest-temp/
+*.tsbuildinfo
+
+# --- Build & Output ---
+dist/
+build/
+.tmp/
+.temp/
+
+# --- OS / Editor junk ---
+.DS_Store
+Thumbs.db
+
+# VSCode
+.vscode/
+*.code-workspace
+
+# --- MySQL Dumps or Local DB Files ---
+*.sql
+*.dump
+
+# --- Temporary Files ---
+*.swp
+*.swo
+*.orig
+
+# --- Project-Specific ---
+# Ignore runtime uploads, exports, etc if you add them later:
+uploads/
+exported/
+temp/
