feat: migração completa do backend para TypeScript, correções gerais e adoção do Vitest
Migrado todo o projeto de JavaScript para TypeScript

Ajustados imports internos para formato ESM com extensão .js no build

Atualizado tsconfig.json para suportar ESNext + NodeNext

Ajustados routers, controllers, services e repositories para TS

Corrigidos tipos do JWT (SignOptions) e erro de overload no jwt.sign()

Criado tipo AppError e refatorados lançamentos de erro nos services

Corrigidos problemas de resolução de módulos no build (ERR_MODULE_NOT_FOUND)

Atualizadas rotas e controllers para refletirem novos nomes e convenções

Ajustada a estrutura de pastas e saída do build para dist/

Removido Jest e migrado toda a suite de testes para Vitest

Adaptados helpers de testes (supertest, setup e teardown) para TS

Corrigidos testes que requeriam tipagem explícita (Categoria[])

Todos os testes executando e passando com Vitest

Melhorias gerais de consistência, tipagem e limpeza de código

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
-    "test": "cross-env NODE_ENV=test ENV_FILE=.env.test node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand"
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui"
   },
   "type": "module",
   "keywords": [],
@@ -33,11 +35,15 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "@types/sequelize": "^4.28.20",
+    "@types/supertest": "^6.0.3",
     "cross-env": "^10.1.0",
+    "happy-dom": "^20.0.10",
     "jest": "^30.2.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.9"
   }
 }
