--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
-    "test": "vitest",
+    "test": "cross-env NODE_ENV=test vitest --run",
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui"
   },
