--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && node scripts/copy-swagger.js",
     "start": "node dist/server.js",
     "test": "cross-env NODE_ENV=test vitest --run",
     "test:watch": "vitest --watch",
@@ -16,16 +16,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@google/generative-ai": "^0.1.0",
+    "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "get-stream": "^9.0.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.2",
+    "pdfkit": "^0.17.2",
     "sequelize": "^6.37.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
@@ -37,6 +39,7 @@
     "@types/node": "^24.10.1",
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.3",
+    "copyfiles": "^2.4.1",
     "cross-env": "^10.1.0",
     "happy-dom": "^20.0.10",
     "jest": "^30.2.0",
